--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Express Dev Skills</title>
 </head>
 <body>
-    <h1>Developer Skills</h1>
+    <h1>My Developer Skills</h1>
     <ul>
-        <% skills.forEach(function(skill) { %>
+        <% skills.forEach(function(s) { %>
             <li>
-                <%= skills.learned %>
+                <%= s.skill %>
             </li>
         <% }) %>
     </ul>
+    <a href="/">Home</a>
 </body>
 </html>
