--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Express Dev Skills</title>
-</head>
-<body>
-    <h1>My Developer Skills</h1>
+<%- include('../partials/header') %>
+
     <ul>
         <% skills.forEach(function(s) { %>
             <li>
@@ -18,6 +9,5 @@
             </li>
         <% }) %>
     </ul>
-    <a href="/">Home</a>
-</body>
-</html>
+
+<%- include('../partials/footer') %>
