--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Express Dev Skills</title>
-</head>
-<body>
+<%- include('../partials/header') %>
+
     <h1><%= skill.skill %></h1>
     <h3>Am I currently learning it?</h3>
     <p><%= skill.learning ? 'yes' : 'not yet' %></p>
-    <br>
-    <a href="/">Home</a>
-    |
-    <a href="/skills">All Skills</a>
-</body>
-</html>
+
+<%- include('../partials/footer') %>
