adds edit functionality

--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -3,5 +3,7 @@
     <h1><%= skill.skill %></h1>
     <h3>Am I currently learning it?</h3>
     <p><%= skill.learning ? 'yes' : 'not yet' %></p>
+    <br>
+    <a href="/skills/<%= skill.id %>/edit">Edit</a>
 
 <%- include('../partials/footer') %>
