--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title>Express Dev Skills</title>
 </head>
 <body>
-    <a href="/">Home</a>
-    |
-    <a href="/skills">All Skills</a>
-    <h1><%= title %></h1>
+    <nav id="nav-bar">
+        <a href="/">
+            <div>Home</div>
+        </a>
+    
+        <a href="/skills">
+            <div>All Skills</div>
+        </a>
+    </nav>
+    <main>
+        <h1><%= title %></h1>
