--- a/views/skills/edit.ejs
+++ b/views/skills/edit.ejs
@@ -7,7 +7,7 @@
     <br>
     <label>
         Currently Learning Skill
-        <input type="checkbox" name="learning"<%= skill.learning ? 'checked' : '' %>>
+        <input class="switch" type="checkbox" name="learning"<%= skill.learning ? 'checked' : '' %>>
     </label>
 </form>
 
