--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,12 @@
   /* outline: 1px solid red; */
 }
 
+:root {
+  --main-blue: #009dff;
+  --alt-blue: #00B7FF;
+  --hover: #91e0ff;
+}
+
 body {
   height: 100vh;
   margin: 0;
@@ -20,7 +26,7 @@ main {
 }
 
 a {
-  color: #00B7FF;
+  color: var(--alt-blue);
   text-decoration: none;
 }
 
@@ -29,7 +35,7 @@ span {
 }
 
 a:hover {
-  color: #91e0ff;
+  color: var(--hover);
 }
 
 p {
@@ -42,7 +48,7 @@ p {
 }
 	
 .delete button {
-  color: #009dff;
+  color: var(--main-blue);
   border: 1px solid rgb(20, 25, 28);
   padding: .8vmin;
 }
@@ -59,7 +65,7 @@ li {
 }
 
 #nav-bar > a {
-  color: #009dff;
+  color: var(--main-blue);
 }
 
 #nav-bar div {
@@ -69,13 +75,13 @@ li {
 }
 
 #nav-bar div:hover {
-  color: #91e0ff;
+  color: var(--hover);
 }
 
-input {
+input[type="text"] {
   background-color: rgb(21, 26, 31);
-  border: 1px solid #009dff;
-  color: #009dff;
+  border: 1px solid var(--main-blue);
+  color: var(--alt-blue);
   border-radius: 5px;
   padding: 5px;
 }
@@ -84,20 +90,21 @@ button {
   padding: 5px;
   font-size: 12px;
   margin-left: 5px;
-  border: 1px solid #009dff;
+  border: 1px solid var(--main-blue);
   background-color: rgb(20, 25, 28);
   color: #009dff;
   border-radius: 5px;
 }
 
 button:hover {
-  background-color:#009dff;
+  background-color:var(--main-blue);
   color: rgb(20, 25, 28);
   border: rgb(20, 25, 28);
 
 }
 
 h1 {
+  letter-spacing: 3px;
   font-size: 7vmin;
   margin-top: 0;
   /* font-size: 5vmin; */
@@ -115,3 +122,47 @@ h3 {
 .answer {
   font-size: 2vmin;
 }
+
+input[type="checkbox"] {
+  display: relative;
+  top: .55vmin;
+  left: .5vmin;
+  margin: 0;
+}
+
+.switch {
+  appearance: none;
+  width: 4.5vmin;
+  height: 2.5vmin;
+  position: relative;
+  border-radius: 50px;
+  background-color: rgb(20, 23, 26);
+  border: 1px solid gray;
+}
+
+.switch:before {
+  box-sizing: border-box;
+  content: "";
+  position: absolute;
+  width: 1.8vmin;
+  height: 1.8vmin;
+  border: 1px solid gray;
+  left: .3vmin;
+  top: .2vmin;
+  border-radius: 50%;
+  transition: all cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
+}
+
+.switch:checked {
+  background-color: rgb(20, 25, 28);;
+  border: .2vmin solid var(--alt-blue);
+}
+
+.switch:checked:before {
+  left: 2.1vmin;
+  background-color: rgb(20, 25, 28);
+  border: .2vmin solid var(--alt-blue);
+  outline: none;
+}
+
+
